add journal.js file

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
         <h2>Journal</h2>
         <form id="word-counter">
           <div class="form-group">
-            <p>Title</p>
+            <p>Titl</p>
             <input type="text" id="word" name="word" class="form-control">
             <br>
             <p>Passage</p>
