--- a/src/index.html
+++ b/src/index.html
@@ -20,10 +20,10 @@
         <h2>Journal</h2>
         <form id="word-counter">
           <div class="form-group">
-            <p>itle</p>
+            <p>Title</p>
             <input type="text" id="word" name="word" class="form-control">
             <br>
-            <p>Passage</p>
+            <p>Passag</p>
             <textarea id="text-passage" name="text-passage" class="form-control"></textarea>
 
             <br>
