--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
             <p>Title</p>
             <input type="text" id="word" name="word" class="form-control">
             <br>
-            <p>Passae</p>
+            <p>ssage</p>
             <textarea id="text-passage" name="text-passage" class="form-control"></textarea>
 
             <br>
