--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
             <p>Title</p>
             <input type="text" id="word" name="word" class="form-control">
             <br>
-            <p>Paage</p>
+            <p>Passage</p>
             <textarea id="text-passage" name="text-passage" class="form-control"></textarea>
 
             <br>
@@ -32,7 +32,7 @@
         </form>
       </div>
       <div class="col-md-6 col-lg-6 col-sm-6" id="div2">
-        <h2>Results:</h2>
+        <h2>Result:</h2>
         <ul>
         <li><strong>Title:</strong><span id="title"></span></li>
         <li><strong>Total Word Count:</strong> <span id="total-count"></span></li>
