add dist folder

--- a/src/index.html
+++ b/src/index.html
@@ -32,10 +32,10 @@
         </form>
       </div>
       <div class="col-md-6 col-lg-6 col-sm-6" id="div2">
-        <h2>Result:</h2>
+        <h2>Results:</h2>
         <ul>
         <li><strong>Title:</strong><span id="title"></span></li>
-        <li><strong>Total Word Count:</strong> <span id="total-count"></span></li>
+        <li><strong>Total Word:</strong> <span id="total-count"></span></li>
         <li><strong>Total Vowel Count:</strong> <span id="vowel"></span></li>
         <li><strong>Total Consonant Count:</strong> <span id="consonant"></span></li>
         <li><strong>Teaser:</strong><span id="teaser"></span></li>
